frontend/src/App.css
/*
    WORKSPACE START
*/

 

#root {
    height: 100vh;    
}

main{
    height: 100%;
}

.workspace-grid{
    /* height: 100%; */
    height: 100% !important;
    padding: 0 !important;
}

.workspace-first-row{
    background: #361737;
    /* height: 100px; */
    width: 100%;
    height: 3%;
}

.workspace-second-row{
    width: 100% !important;
    height: 97% !important;
}

.bold{
    font-weight: bold;
}

*{
    padding: 0 !important;
    margin: 0 !important;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important
}

.workspace-name-grid{
    height: 100% !important;
    padding-top: 6% !important;
    padding-bottom: 7% !important;
    padding-left: 5% !important;
}

.workspace-name-grid:hover{
    background: #361737;
    cursor: pointer;
}

.channel-title-menu{
  padding-left: 3% !important;
}

.add-channels-menu{
    margin-left: 8% !important;
}

.menu-side-icon-container{
    float: right !important;
    padding-right: 5% !important;
}

.menu-side-icon{
  
}

#add-channels-menu-txt{
    padding-left: 2% !important;
}

.workspace-menu{
    /* padding: 0 !important;  */
    background: #401C41 !important;
    height: 100%;
    color: white;
    
}

.new-message-btn{
    height: 125%;
    width: 50%;
    background: white !important;
    float: right !important;
    margin-right: 15% !important;
    /* padding-bottom: 10px !important; */
}


.icon-col{
    margin-top: 1% !important;
}

.collapsible-menu-list{
    margin-left: 8% !important;     
}

.workspace-menu-row{
    padding-bottom: 5% !important;
    padding-top: 5% !important;
    padding-left: 5% !important;
}

.workspace-menu-row:hover{
    background: #361737;
    cursor: pointer;
}

.workspace-submenu-row{
    padding-bottom: 1.5% !important;
    padding-top: 1.5% !important;
    padding-left: 5% !important;
}

.workspace-submenu-row:hover{
    background: #361737;
    cursor: pointer;
}


.workspace-menu-text{
    margin-left: 3% !important;
    color: white;

    /* margin: auto !important; */
}

.workspace-main-row{
    margin-bottom: 7% !important;
}



/*
    CHAT START
*/

.workspace-chat{
    background: red !important;
    height: 100% !important;
}


.chat-header {
    background: cyan !important;
    height: 6% !important;
    padding: 0 !important;
    margin: 0 !important;   

}

.chat-messages-container{
    background: yellow;
    height: 84% !important;
    padding: 0 !important;
    margin: 0 !important;
} 


.chat-chatbox-container{
    height: 10% !important;
    background: green;
    padding: 0 !important;
    margin: 0 !important;
}



/* 
    CHAT END
*/


/*
    WORKSPACE END
*/


/*
    GLOBAL START
*/

.h-100{
    height: 100% !important;
}

/* 
    GLOBAL END
*/

